<resources>
    <string name="app_name">DocToGo</string>
    <string name="title_patient_activity">WELCOME</string>
    <string name="title_patient_name">Patient Name:</string>
    <string name="title_patient_age">Age:</string>
    <string name="title_patient_phone">Phone:</string>
    <string name="title_patient_address">Address:</string>
    <string name="title_patient_email">Email:</string>
    <string name="title_patient_city">City:</string>
    <string name="title_patient_main_menu">MAIN MENU</string>
    <string name="doctorName">Doctor Name: </string>
    <string name="doctorAge">Age:</string>
    <string name="doctorAddress">Address:</string>
    <string name="doctorEmail">Email:</string>
    <string name="doctorMainTitle">APPOINTMENTS</string>
    <string name="doctorReportTitle">REPORTS</string>
    <string name="patientLocationDocName">Doctor Name: </string>
    <string name="patientLocationDocAddress">Address: </string>
    <string name="patientLocationDocCity">City:</string>
    <string name="patientLocationBtnApp">Book an appointment</string>
    <string name="button_patient_locate_doctor">LOCATE DOCTOR</string>
    <string name="button_patient_payments">PAYMENTS</string>
    <string name="button_patient_check_history">CHECK HISTORY</string>
    <string name="button_patient_update_information">UPDATE PERSONAL INFORMATION</string>
    <string name="button_update_information">UPDATE INFORMATION</string>
    <string name="title_locate_doctor">LOCATE DOCTOR</string>
    <string name="title_patient_payment">PAYMENT</string>
    <string name="title_patient_history">MEDICAL HISTORY</string>
    <string name="title_patient_update_information">PERSONAL INFORMATION</string>
    <string name="txt_LoginPasswordText">Password</string>
    <string name="txt_LoginUsernameText">Username</string>
    <string name="txt_LoginText">Log In</string>
    <string name="btn_RegisterText">Register</string>
    <string name="btn_AdminToRegister">Register New Account</string>
    <string name="btn_AdminToViewAll">View All Accounts</string>
    <string name="txt_AccountRoles">Account Type</string>
    <string name="btn_RegisterAccount">Create Account</string>
    <string name="txt_FilterName">Filter userame</string>
    <string name="btn_logout">Log Out</string>
    <string name="btn_cashier_addNewTransaction">New Transaction</string>
    <string name="btn_cashier_viewTransactions">View Pending Transactions</string>
    <string name="cashierNameTxt" />
    <string name="txt_FirstName">First Name</string>
    <string name="txt_Username">Username*</string>
    <string name="txt_Password">Password*</string>
    <string name="txt_Lastname">Last Name</string>
    <string name="txt_Address">Address*</string>
    <string name="txt_City">City*</string>
    <string name="txt_Email">Email*</string>
    <string name="txt_PhoneNumber">Phone Number</string>
    <string name="txt_Age">Age</string>
    <string name="btn_CancelText">Cancel</string>
    <string name="txt_RegisterGuide">Fields marked with * are required.</string>
    <string name="txt_Weight">Weight:</string>
    <string name="img_AdminAccountListItemImage">imagePlaceholder</string>
    <string name="img_adminaccountdetailsimage">User Image</string>
    <string name="txt_AdminDetailAccountFirstname">Firstname:</string>
    <string name="txt_AdminDetailAccountLastname">Lastname:</string>
    <string name="txt_AdminDetailAccountEmail">Email:</string>
    <string name="btn_AdminDetailAccountSave">Save</string>
    <string name="btn_AdminDetailAccountExit">Done</string>
    <string name="btn_AdminDetailAccountRevert">Revert</string>
    <string name="txt_AdminDetailAccountUsername">Username:</string>
    <string name="txt_AdminDetailAccountPassword">Password:</string>
    <string name="txt_AdminDetailAccountAddress">Address:</string>
    <string name="txt_AdminDetailAccountPhone">Phone:</string>
    <string name="txt_AdminDetailAccountGender">Gender:</string>
    <string name="txt_AdminDetailAccountAge">Age:</string>
    <string name="txt_AdminDetailAccountWeight">Weight:</string>
    <string name="txt_AdminDetailAccountQualifications">Qualifications:</string>
    <string name="txt_Qualifications">Qualifications</string>
    <string name="cashier_new_patientTxt"></string>
    <string name="cashier_newNameTxt">Patient Name</string>
    <string name="add_image">An add image to show the list of patients</string>
    <string name="cashier_patient_desc" />
    <string name="cashier_new_select_date">Select Date</string>
    <string name="cashier_new_due_date" />
    <string name="cashier_new_patient_payment_amount" />
    <string name="cashier_newReportTitle">Select A Report</string>
    <string name="cashier_newReportTxt">Report#</string>
    <string name="cashier_new_ReportnumTxt" />
    <string name="cashier_newDoctor">Doctor Name</string>
    <string name="cashier_new_doctorTxt" />
    <string name="cashier_newAddress">Patient Address</string>
    <string name="cashier_newDetail">Case detail</string>
    <string name="cashier_new_amount">Amount</string>
    <string name="cashier_new_dueDate">Due Date</string>
    <string name="cashier_new_dueDateTxt" />
    <string name="cashier_new_btn_done">Done</string>
    <string name="cashier_new_btn_cancel">Cancel</string>
    <string name="cashier_newDescription">Case Description</string>
    <string name="cashier_patient_address" />
    <string name="cashier_newCaseDate">Date</string>
    <string name="cashier_new_CaseDateTxt" />
    <string name="cashier_listview1_reportNum" />
    <string name="cashier_listview1_patient" />
    <string name="cashier_listview2_payId" />
    <string name="cashier_listview2_patient" />
    <string name="cashier_listview2_due" />
    <string name="cashier_viewTitle">Select A Transaction</string>
    <string name="cashier_view_TranscationNumber">Transaction#</string>
    <string name="cashier_view_dueDate">Due Date</string>
    <string name="cashier_view_TranscationNumberTxt" />
    <string name="cashier_view_dueDateTxt" />
    <string name="cashier_view_patientNameTxt" />
    <string name="cashier_view_send_Reminder">Reminder</string>
    <string name="cashier_view_Edit">Edit</string>
    <string name="pop_amount">Amount</string>
    <string name="pop_date">Due Date</string>
    <string name="btn_cashier_historyTransaction">"Transaction Archive "</string>
    <string name="pop_trans_date">Transaction Date</string>
    <string name="cashier_archiveTitle">Archive Transactions List</string>
    <string name="cashier_archive_transID">Transaction#</string>
    <string name="cashier_transDate">Transaction Date</string>
    <string name="cashier_archive_descTxt" />
    <string name="cashier_archive_addressTxt" />
    <string name="cashier_archive_transIDTxt" />
    <string name="cashier_archive_transDateTxt" />
    <string name="cashier_archive_patientTxt" />
    <string name="cashier_archive_doctorTxt" />
    <string name="cashier_archive_amountTxt" />
    <string name="cashier_listview1_arrow"><![CDATA[>]]></string>
    <string name="cashier_listview2_arrow"><![CDATA[>]]></string>
    <string name="cashier_new_trans_dueDate">Click to enter</string>
    <string name="appointment_listview1" />
    <string name="appointment_listview2" />
    <string name="title_doctor_comments">COMMENTS</string>
    <string name="pop_message">Message</string>
    <string name="pop_report">Report</string>
    <string name="title_message_activity">WELCOME</string>
    <string name="title_message_name">Patient Name:</string>
    <string name="title_message_age">Age:</string>
    <string name="title_message_docName">Doctor Name:</string>
    <string name="singleMessage" />
    <string name="message_sendImg">image of Sending icon</string>
    <string name="message_inputText" />
    <string name="button_patient_Message">MESSAGE</string>
    <string name="doctor_report_patientName">Patient Name:</string>
    <string name="doctor_report_age">Age:</string>
    <string name="doctor_report_date">Date:</string>
    <string name="doctor_report_dateTxt" />
    <string name="doctor_report_patientNameTxt" />
    <string name="doctor_report_ageTxt" />
    <string name="doctor_report_doctorName">Doctor Name:</string>
    <string name="doctor_report_doctorNameTxt" />
    <string name="doctor_report_desc">Case Description/Comment:</string>
    <string name="btn_doctor_report_submit">SUBMIT</string>
    <string name="title_message">MESSAGE</string>
    <string name="doctor_report_descEdit" />
    <string name="txt_AdminDetailAccountMSP">MSP:</string>
    <string name="txt_MSP">MSP</string>
    <string name="title_patient_msp">MSP:</string>
    <string name="upInfInputAddress" />
    <string name="upInfInputCity" />
    <string name="upInfInputEmail" />
    <string name="upInfInputPhone" />
    <string name="upInfInputWeight" />
    <string name="upInfInputMSP" />
    <string name="cashier_newMSP">MSP</string>
    <string name="cashier_new_MSPTxt" />
    <string name="cashier_view_msp">MSP</string>
    <string name="cashier_view_mspTxt" />
    <string name="cashier_archive_msp">MSP</string>
    <string name="cashier_archive_mspTxt" />
    <string name="title_cashier">WELCOME</string>
    <string name="name_cashier" />
    <string-array name="Roles">
        <item>Admin</item>
        <item>Patient</item>
        <item>Doctor</item>
        <item>Cashier</item>
    </string-array>
    <string-array name="FilterRoles">
        <item>All</item>
        <item>Admin</item>
        <item>Patient</item>
        <item>Doctor</item>
        <item>Cashier</item>
    </string-array>
    <string-array name="Genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Undefined</item>
    </string-array>
    <string-array name="ScrollMenu">
        <item></item>
        <item>Locate Doctor</item>
        <item>Payments</item>
        <item>Check History</item>
        <item>Update Personal Information</item>
    </string-array>
    <string-array name="ScrollDoctor">
        <item></item>
        <item>View Appointments</item>
        <item>Reports</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btncheckAppointment">CHECK APPOINTMENT</string>
    <string name="title_patient_appointment">CHECK APPOINTMENT</string>
    <string name="listview_patient_appointment_docInfo"></string>
    <string name="listview_patient_appointment_date"></string>
    <string name="pop_cancel">Cancel Appointment</string>
    <string name="listview_patient_payment_due_amount" />
    <string name="listview_patient_patient_appointInformation" />
    <string name="listview_patient_payment_pending" />
    <string name="patient_payment_credit">Credit Card#:</string>
    <string name="patient_payment_credit_amount">Amount:</string>
    <string name="patient_payment_credit_dueDate">Due Date:</string>
    <string name="patient_payment_credit_number">Credit Card#:</string>
    <string name="patient_payment_credit_expiryDate">Expiry Date:</string>
    <string name="patient_payment_credit_amountTXT" />
    <string name="patient_payment_credit_dueDateTXT" />
    <string name="patient_payment_credit_numberTXT">xxxxxxxxxxxxxxxx</string>
    <string name="patient_payment_credit_expiryDateTXT">mmyy</string>
    <string name="btn_credit">SUBMIT</string>
    <string name="cashier_view_credit">Credit Card#:</string>
    <string name="cashier_view_creditTxt" />
    <string name="cashier_view_expiryTxt" />
    <string name="cashier_view_expiry">Expiry Date:</string>
    <string name="pop_closing_transaction">Closing Transaction</string>
    <string name="pop_decline">Decline Credit</string>
    <string name="listview_patient_history_date" />
    <string name="listview_patient_history_docName" />
    <string name="patient_payment_history_date">Date:</string>
    <string name="patient_payment_history_dateTXT" />
</resources>