<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scl_AdminDetailAccount"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackgroundActivity">

    <TableLayout
        android:id="@+id/tbl_AdminDetailAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@color/colorBackgroundActivity"
        tools:context=".admin_account_details">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_AdminAccountDetailsUserImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:contentDescription="@string/img_adminaccountdetailsimage" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_AdminDetailAccountRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:text=""
                android:textSize="22sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountFirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountFirstname"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_AdminDetailAccountFirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_FirstName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailLastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountLastname"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_AdminDetailAccountLastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_Lastname"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountUsername"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_AdminDetailAccountUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_Username"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountEmail"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_AdminDetailAccountEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_Email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountPassword"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_AdminDetailAccountPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_Password"
                android:importantForAutofill="no"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountAddress"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_AdminDetailAccountAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_Address"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountAddress"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_AdminDetailAccountCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_City"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountPhone"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_AdminDetailAccountPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_PhoneNumber"
                android:importantForAutofill="no"
                android:inputType="phone" />
        </TableRow>

        <TableRow
            android:id="@+id/row_AdminDetailAccountGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountGender"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spn_AdminDetailAccountGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/Genders" />
        </TableRow>

        <TableRow
            android:id="@+id/row_AdminDetailAccountAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountAge"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_AdminDetailAccountAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_Age"
                android:importantForAutofill="no"
                android:inputType="numberSigned" />
        </TableRow>

        <TableRow
            android:id="@+id/row_AdminDetailAccountWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountWeight"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_AdminDetailAccountWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_Weight"
                android:importantForAutofill="no"
                android:inputType="numberSigned" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountMSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_AdminDetailAccountMSP"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_AdminDetailAccountMSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_MSP"
                android:importantForAutofill="no"
                android:inputType="numberSigned" />
        </TableRow>

        <TableRow
            android:id="@+id/row_AdminDetailAccountQualifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountQualifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/txt_AdminDetailAccountQualifications"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_AdminDetailAccountQualifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/txt_Qualifications"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AdminDetailAccountGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/txt_RegisterGuide"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_AdminDetailAccountRevert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_AdminDetailAccountRevert" />

            <Button
                android:id="@+id/btn_AdminDetailAccountSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_AdminDetailAccountSave" />

        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_AdminDetailAccountExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_AdminDetailAccountExit" />
        </TableRow>
        <TableRow>

            <Button
                android:id="@+id/btn_AdminDetailAccountDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_AdminDetailAccountDelete" />
        </TableRow>
    </TableLayout>

</androidx.core.widget.NestedScrollView>