<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundActivity"
    android:orientation="vertical"
    android:paddingLeft="50sp"
    android:paddingTop="300sp"
    android:paddingRight="50sp"
    tools:context=".admin_main">

    <TextView
        android:id="@+id/lbl_AdminUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_AdminToRegisterNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_AdminToRegister" />

    <Button
        android:id="@+id/btn_AdminToViewAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_AdminToViewAll" />

    <Button
        android:id="@+id/bbtn_AdminLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout" />

</LinearLayout>