<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cashier_listview2_patient"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@android:color/primary_text_light"
        android:text="@string/cashier_listview2_patient"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/cashier_listview2_due"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@android:color/primary_text_light"
        android:text="@string/cashier_listview2_due"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/cashier_listview2_arrow"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@android:color/primary_text_light"
        android:text="@string/cashier_listview2_arrow"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>