<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_register"
    android:background="@color/colorBackgroundActivity">

    <Spinner
        android:id="@+id/spn_AdminRegRole"
        android:layout_width="match_parent"
        android:layout_height="38sp"
        android:background="#FFFFFF"
        android:entries="@array/Roles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_AdminRegisterRole" />

    <TextView
        android:id="@+id/txt_AdminRegisterRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_AccountRoles"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_AdminRegUsername"
        android:layout_marginTop="12sp"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/txt_LoginUsernameText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_AdminRegRole" />

    <EditText
        android:id="@+id/txt_AdminRegEmail"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/txt_Email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_AdminRegPassword" />

    <EditText
        android:id="@+id/txt_AdminRegPassword"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/txt_LoginPasswordText"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_AdminRegUsername"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btn_AdminRegisterCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_RegisterAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>